# MEM

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  jacobian_gap_diagnostics_plan.md  mkdocs.yml  modulus_memory_channels_spec.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_request.md
.github/workflows/: ci.yml  docs-site.yml  reference-docs.yml
docs/: changelog.md  context_snapshot.md  index.md
docs/engineering/: ARCHITECTURE.md  DECISION_LOG.md  EXECUTIVE_OVERVIEW.md  EXPERIMENT_PLAYBOOK.md  GPU_VALIDATION.md  LEVEL_UP_CAMPAIGN.md  PHASE_GATE_RC_READINESS.md  PROCESS_FLOW.md  README.md  REVISION_TEMPLATE.md  STATUS_DASHBOARD.md
docs/process/: CHANGE_CONTROL.md  DEVELOPMENT_WORKFLOW.md  MEETING_CADENCE.md  README.md  REPOSITORY_HARDENING.md
docs/reference/: API_INDEX.md  README.md
docs/reference/api/: __main__.md  artifacts.md  bench_write_keep_read.md  cli.md  config.md  dk_predictor.md  gap.md  io.md  jacobian_norm.md  model.md  modulus_memory_channels.md  probe_runner.md  reporting.md  subspace.md  training.md  (+1 more)
scripts/: backend_benchmark.py  build_api_reference.py  build_docs.py  generate_context_docs.py  phase_gate_report.py  process_guard.py  reliability_compare.py  reliability_matrix.py
src/modulus_memory_channels/: __init__.py  artifacts.py  bench_write_keep_read.py  cli.py  config.py  dk_predictor.py  gap.py  io.py  jacobian_norm.py  model.py  probe_runner.py  reporting.py  subspace.py  training.py  visualization.py
tests/: test_diagnostics.py
