[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modulus-memory-channels"
version = "0.1.0"
description = "Reference JAX harness for memory-channel diagnostics via Jacobian-gap control."
requires-python = ">=3.12"
dependencies = [
  "jax",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
docs = [
  "mkdocs>=1.6,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
cache_dir = ".pytest_cache_local"
testpaths = ["tests"]
norecursedirs = ["pytest-cache-files-*"]
addopts = "-p no:cacheprovider"
